# slisp

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
doc/: x86.md
examples/: arg_capture_all.l  arg_capture_empty.sl  arg_capture_rem.sl  argv.sl  call.l  combinators.sl  cond.sl  currying.sl  ffi.sl  fibonacci.l  fluent.sl  generator.sl  lambda.sl  lambda_nested_bindings.l  lambda_rvalue.sl  load.sl  match.sl  print.l  print.sl  prog.sl  tilde.sl
lib/: args.sl  combinators.sl  console.sl  cps.sl  io.l  io.sl  iterators.l  iterators.sl  lang.l  lang.sl  list.sl  str.sl  sys.l  utils.sl
lisp/: adder.l  cons.l  load.l  map.l
src/: atom.rs  compiler.rs  error.rs  ffi.rs  grammar.lalrpop  heap.rs  ir.rs  lib.rs  opcodes.rs  stack.rs  syscalls.rs  tests.rs  types.rs  vm.rs
src/bytecode/: compiler.rs  ffi.rs  mod.rs  opcodes.rs  stack.rs  tests.rs  value.rs  vm.rs
src/llvm/: compiler.rs  core.ll  mod.rs
src/reader/: atom.rs  grammar.lalrpop  ir.rs  mod.rs  tests.rs
src/vm/: ffi.rs  machine.rs  mod.rs  stack.rs  value.rs
