[package]
name = "sl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sl"
path = "bin/sl.rs"

[[bin]]
name = "slc"
path = "bin/slc.rs"

[[bin]]
name = "sld"
path = "bin/sld.rs"

[[bin]]
name = "slr"
path = "bin/slr.rs"

[[bin]]
name = "slvm"
path = "bin/slvm.rs"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
map-macro = "0.3"

[dependencies]
bincode = "2.0"
clap = { version = "4.5", features = ["derive"] }
dlopen2 = "0.8"
env_logger = "0.11"
lalrpop-util = { version = "0.20", features = ["lexer"] }
libc = "0.2"
libffi = "4.1"
rustyline = { version = "17.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0"

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
